<resources>
    <string name="app_name">My Application2</string>
    <string name="input_hint">Input/RMB</string>
    <string name="dollar_label">DOLLAR: %1$.2f</string>
    <string name="euro_label">EURO: %1$.2f</string>
    <string name="won_label">WON: %1$.2f</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="points_3">+3 POINTS</string>
    <string name="points_2">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="initial_score">0</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="title_activity_config">ConfigActivity</string>


</resources>